src/objects/zqu__Catalog_Sync_History__c.object
<CustomObject>
    <description>From Salesforce to Zuora Product Catalog Sync History.</description>
    <fields>
        <fullName>zqu__Error_Message__c</fullName>
        <description>Error Message for the Catalog Sync</description>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__Number_of_Errors__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Product Catalog Sync Errors</description>
        <label>Number of Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Number_of_Objects_Requested__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Objects Requested for the Sync</description>
        <label>Number of Objects Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Number_of_Objects_Synced__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Objects Synced</description>
        <label>Number of Objects Synced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Syncing</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Sync_seconds__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Seconds it took to complete the sync job</description>
        <label>Sync Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Catalog Sync History</label>
    <nameField>
        <label>Catalog Sync History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalog Sync Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>